# pc-policies-spreadsheet

./: API_config.ini  Compliance-All-Policies-excel.py  Compliance-Policies-Create-Standard.py  Compliance-Policies-Update.py  Policies and Compliance Standards Automation.docx  README.md  pyproject.toml
data/: compliance_all_policies_Awesome_Inc_Awesome_Standard_latest.xlsx  compliance_standard_Customer_Customer_Standard_latest.xlsx
