[project]
name = "pc-policies"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.10",
    "asyncio>=3.4.3",
    "colorama>=0.4.6",
    "openpyxl>=3.1.5",
    "requests>=2.32.3",
    "tqdm>=4.67.1",
]

[tool.uv]
dev-dependencies = [
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]
[tool.ruff]
line-length = 140
[tool.ruff.format]
quote-style = "single"
indent-style = "space"
